<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/edittext"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/rad"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/headline"
            android:textAlignment="center"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/hintline"
            android:paddingBottom="@dimen/_10sdp"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/imget"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
android:layout_margin="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/email"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/editlattry"
        android:text="@string/btnText"
        android:id="@+id/btnStart"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hintmessg"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_margin="@dimen/_5sdp"
        android:textColor="@color/black"
    />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/btndays"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/days"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text=":"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="@dimen/_20sdp"/>
    <Button
        android:id="@+id/btnhours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/housr"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text=":"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="@dimen/_20sdp"/>
    <Button
        android:id="@+id/btnmins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/mins"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text=":"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="@dimen/_20sdp"/>
    <Button
        android:id="@+id/btnsec"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/sec"/>
</LinearLayout>

</LinearLayout>