<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Orange"
    tools:context=".MainActivity">
    <ScrollView
        android:id="@+id/scView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/Login"
            android:textAlignment="center"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext"
                android:drawableStart="@drawable/email2"
                android:hint="@string/HintEmail"
                android:paddingStart="@dimen/_5sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textField"
                android:background="@drawable/edittext"
                android:drawableStart="@drawable/unlock"
                android:hint="@string/HintPassword"
                android:drawablePadding="@dimen/_10sdp"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:background="@drawable/edittext"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:text="@string/Loginbtn" />

    </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>